--- a/2022-2023/Programming Level-up/6.introduction-to-matploblib.org
+++ b/2022-2023/Programming Level-up/6.introduction-to-matploblib.org
@@ -1,28 +1,9 @@
-#+options: ':nil *:t -:t ::t <:t H:3 \n:nil ^:t arch:headline author:t
-#+options: broken-links:nil c:nil creator:nil d:(not "LOGBOOK") date:t e:t email:nil
-#+options: f:t inline:t num:t p:nil pri:nil prop:nil stat:t tags:t tasks:t tex:t
-#+options: timestamp:t title:t toc:t todo:t |:t
 #+title: Programming Level-up
 #+SUBTITLE: An Introduction to Matplotlib
-#+date:
 #+author: Jay Morgan
-#+language: en
-#+select_tags: export
-#+exclude_tags: noexport
-#+creator: Emacs 27.1 (Org mode 9.4.6)
-#+cite_export:
-
 #+startup: beamer
-#+LATEX_CLASS: beamer
-#+LATEX_CLASS_OPTIONS: [10pt]
-#+BEAMER_FRAME_LEVEL: 2
-#+BEAMER_THEME: Berkeley
-#+LATEX_HEADER: \setlength{\parskip}{5pt}
-#+LATEX_HEADER: \newcommand{\footnoteframe}[1]{\footnote[frame]{#1}}
-#+LaTeX_HEADER: \addtobeamertemplate{footnote}{}{\vspace{2ex}}
-#+LATEX_HEADER: \usepackage{tabularx}
-
-#+PROPERTY: header-args:python :eval never-export
+#+include: ./header.org
+#+PROPERTY: header-args:python :results pp output :session :exports both :eval never-export
 
 #+name: commentify
 #+begin_src emacs-lisp :var result="" :exports none
@@ -35,24 +16,6 @@
 #+RESULTS: commentify
 : Results: 
 : # => 
-
-#+begin_src emacs-lisp :exports none
-(setq org-latex-minted-options
-      '(("frame" "lines")
-	("linenos=true")
-	("firstnumber=last")
-	("fontsize=\\footnotesize")
-	("xleftmargin=15pt")
-	("numbersep=8pt")))
-#+end_src
-
-#+RESULTS:
-| frame                  | lines |
-| linenos=true           |       |
-| firstnumber=last       |       |
-| fontsize=\footnotesize |       |
-| xleftmargin=15pt       |       |
-| numbersep=8pt          |       |
 
 * Matplotlib
 
@@ -733,50 +696,6 @@ can visualise:
 - Plotting tutorials -- https://matplotlib.org/stable/tutorials/index.html
 - Basic plot types -- https://matplotlib.org/stable/plot_types/index.html
 
-* COMMENT Pandas
-
-*** What is Pandas?
-
-*** Installing and importing pandas
-
-*** From Dict of lists
-
-*** Reading a CSV file
-
-*** Plenty more methods to use data
-
-https://pandas.pydata.org/docs/user_guide/dsintro.html#dataframe
-
-*** The dataframe object
-
-- Rows
-- columns
-- shape
-- 
-
-*** Selecting columns
-
-*** Selecting rows
-
-- iloc
-- loc
-
-*** Head/tail
-
-*** Merge
-
-*** Join
-
-*** Working with missing data
-
-*** Categorical data
-
-*** Date functionality
-
-*** IO
-
-https://pandas.pydata.org/docs/user_guide/io.html
-
-*** Learn More
-
-https://pandas.pydata.org/docs/user_guide/10min.html
+# Local Variables:
+# org-latex-minted-options: (("frame" "lines") ("linenos=true") ("firstnumber=last") ("fontsize=\\footnotesize") ("bgcolor=LightGray") ("xleftmargin=5pt") ("tabsize=2") ("breaklines=true") ("numbersep=10pt"))
+# End:
